--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryan Lefebvre Tree</title>
+    <title>llilix</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="icon" href="./images/profile.jpg" type="image/x-icon" />
@@ -17,31 +17,30 @@
     </a>
 
     <div class="userName">
-        Ryan Lefebvre
+        llilix
     </div>
 
     <div class="description">
-        Focused on getting better every day.
+        •·.· music / socials ·.·•
     </div>
 
     <div class="links">
-        <a class="link" href="https://www.logsmarter.net" target="_blank">
-            <i class="fas fa-robot">&nbsp;</i>LogSmarter™
+        <a class="link" href="https://open.spotify.com/user/mgz80dq8c36498vu9hgpqthvc?si=3bbfac100c7b4f16&nd=1&dlsi=0a896cf5e3b14107" target="_blank">
+            spotify
         </a>
-        <a class="link" href="https://github.com/RyanLefebvre" target="_blank">
-            <i class="fab fa-github">&nbsp;</i>Github
+        <a class="link" href="https://www.youtube.com/channel/UCfgUJvpylUAM_UO13Qx8xqQ" target="_blank">
+            youtube
         </a>
-        <a class="link" href="https://www.instagram.com/ryanlefeb33/" target="_blank">
-            <i class="fab fa-instagram">&nbsp;</i>Instagram
+        <a class="link" href="https://twitter.com/llilixmusic" target="_blank">
+            twitter
         </a>
-        <a class="link" href="https://www.reddit.com/user/BostonRAL" target="_blank">
-            <i class="fab fa-reddit">&nbsp;</i>Reddit
+        <a class="link" href="https://www.last.fm/user/llilix" target="_blank">
+            last.fm
         </a>
     </div>
 
     <div class="source">
-        I built this linktree for free. If you want your own, here is the
-        <a href="https://github.com/RyanLefebvre/TREE">source code</a>
+        
     </div>
 
 </body>
