--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             •·.· spotify ·.·•
         </a>
         <a class="link" href="https://www.youtube.com/channel/UCfgUJvpylUAM_UO13Qx8xqQ" target="_blank">
-            youtube
+            •·.· youtube ·.·•
         </a>
         <a class="link" href="https://twitter.com/llilixmusic" target="_blank">
-            twitter
+            •·.· twitter ·.·•
         </a>
         <a class="link" href="https://www.last.fm/user/llilix" target="_blank">
-            last.fm
+            •·.·  last.fm ·.·•
         </a>
     </div>
 
