--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="links">
-        <a class="link" href="https://open.spotify.com/user/mgz80dq8c36498vu9hgpqthvc?si=3bbfac100c7b4f16&nd=1&dlsi=0a896cf5e3b14107" target="_blank">
+        <a class="link" href="https://open.spotify.com/artist/1ISpGVah5PlZUCBrq31ltt?si=yR8EuBtaQKO_s1y1oUkKRw" target="_blank">
             •·.· spotify ·.·•
         </a>
         <a class="link" href="https://www.youtube.com/channel/UCfgUJvpylUAM_UO13Qx8xqQ" target="_blank">
