--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             •·.· twitter ·.·•
         </a>
         <a class="link" href="https://www.last.fm/user/llilix" target="_blank">
-            •·.·  last.fm ·.·•
+            •·.·  lastfm ·.·•
         </a>
     </div>
-   
+
     <div class="source">
-        
+
     </div>
 
 </body>
