--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             •·.· twitter ·.·•
         </a>
         <a class="link" href="https://www.last.fm/user/llilix" target="_blank">
-            •·.·  lastfm ·.·•
+            •·.·  last.fm ·.·•
         </a>
     </div>
 
